--- a/ex_03ter/index.html
+++ b/ex_03ter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planets information</title>
-    <link rel="stylesheet" href="ex_03ter.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Planets information</h1>
